ValidationUtilTest